2005-10-31 Magnus Hagdorn
 * CF_loadfile.py: add option to extract RSL curve only for ice-free areas
 * CF_rsl.py: ditto
 * plotRSL.py: ditto

2005-10-11 Magnus Hagdorn
 * fix ChangeLog dates
 * CF_area.py: add support for plotting shapefiles using the python interface
   to shapelib
 * CF_profile.py: in getExent we can now specify an interval to avoid 
   getting into memory problems
 * plotCFstats.py: extract about 100 profiles for extent plots
 * plotCFvar.py: optionally plot a shapefile
 * plot_extent.py: ditto

2005-10-06 Magnus Hagdorn
 * CF_area.py: use tempfile for temporary files
 * CF_colourmap.py: ditto
 * CF_diff.py: ditto
 * CF_options.py: ditto
 * CF_rsl.py: ditto
 * create_topo.py: ditto
 * plotStreams.py: ditto

2005-10-06 Magnus Hagdorn
 * setup.py: bump version
 * update NEWS

2005-10-04 Magnus Hagdorn
 * CF_IOmisc.py: add expontential temperature EIS forcing
 * CF_options.py: add options to handle expontential temperature EIS forcing
 * plotEISvar.py: use new temperature forcing
 * plot_extent.py: plot key if we are plotting more than one file

2005-10-03 Magnus Hagdorn
 * CF_options.py: improve help message somewhat
 * plotCFstats.py: add option to plot average ice thickness
 * plotStreams.py: we can plot more than 1 file, we can also plot
   average basal velos

2005-09-12 Magnus Hagdorn
 * 2Dsplinemodule.c: pygsl wrapper for splines is badly leaking memory
   and doesn't work on x86_64. Resurrected old implementation. It could 
   be improved vastly, but hey it works
 * setup.py: added function for looking for libraries, added extension
   2Dsplinemodule
 * __init__.py: added 2Dsplinemodule
 * CF_loadfile.py: use TwoDspline for extracting RSL
 * plotRSL.py: minor improvements

2005-08-17 Stewart Jamieson
 * a2c.py: fix origins of velo grid

2005-08-15 Magnus Hagdorn
 * litho_temp.cpt: new colourmap for temperatures of lithosphere
 * CF_colourmap.py: hooked up litho_temp.cpt
 * setup.py: ditto